changed df col name to make more sense

--- a/Data_Retrieval.ipynb
+++ b/Data_Retrieval.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d4eadfd6",
+   "id": "503e9d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5fbcdd27",
+   "id": "abf7a6c5",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "488ab98d",
+   "id": "a338f1bd",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "247eba96",
+   "id": "0d0e15f7",
    "metadata": {},
    "outputs": [
     {
@@ -1037,18 +1037,18 @@
     "#supress scientific notation by rounding\n",
     "avg_singfam_home_price_city = avg_home_price_city.round(2)\n",
     "\n",
-    "avg_singfam_home_price_city"
+    "avg_singfam_home_price_city.rename(columns = {'2023-02-28':})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11ac8d36",
+   "execution_count": 9,
+   "id": "1bdb87fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export csv\n",
-    "avg_singfam_home_price_city.to_csv()"
+    "avg_singfam_home_price_city.to_csv(\"Resources/CO_Cities_SingleFam_AvgPrice.csv\")"
    ]
   }
  ],
