changed df col name to make more sense

--- a/Data_Retrieval.ipynb
+++ b/Data_Retrieval.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "503e9d19",
+   "id": "ea279e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abf7a6c5",
+   "id": "8afc52ac",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a338f1bd",
+   "id": "059c746e",
    "metadata": {},
    "outputs": [
     {
@@ -873,8 +873,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0d0e15f7",
+   "execution_count": 12,
+   "id": "ff918cb7",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>City</th>\n",
-       "      <th>2023-02-28</th>\n",
+       "      <th>Single Fam Avg Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1003,29 +1003,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                City  2023-02-28\n",
-       "0             Arvada   663225.80\n",
-       "1             Aurora   530770.16\n",
-       "2            Boulder  1418469.92\n",
-       "3       Breckenridge  1397773.68\n",
-       "4         Broomfield   774477.19\n",
-       "5        Castle Rock   670136.92\n",
-       "6   Colorado Springs   506916.92\n",
-       "7             Denver   724441.68\n",
-       "8          Englewood   534049.28\n",
-       "9       Fort Collins   619802.66\n",
-       "10            Frisco  1722745.05\n",
-       "11            Golden   694776.49\n",
-       "12          Lakewood   653374.00\n",
-       "13         Littleton   771758.24\n",
-       "14          Longmont   574385.85\n",
-       "15              Mesa   505738.88\n",
-       "16            Parker   848518.77\n",
-       "17            Pueblo   251260.46\n",
-       "18          Thornton   567031.96"
+       "                City  Single Fam Avg Price\n",
+       "0             Arvada             663225.80\n",
+       "1             Aurora             530770.16\n",
+       "2            Boulder            1418469.92\n",
+       "3       Breckenridge            1397773.68\n",
+       "4         Broomfield             774477.19\n",
+       "5        Castle Rock             670136.92\n",
+       "6   Colorado Springs             506916.92\n",
+       "7             Denver             724441.68\n",
+       "8          Englewood             534049.28\n",
+       "9       Fort Collins             619802.66\n",
+       "10            Frisco            1722745.05\n",
+       "11            Golden             694776.49\n",
+       "12          Lakewood             653374.00\n",
+       "13         Littleton             771758.24\n",
+       "14          Longmont             574385.85\n",
+       "15              Mesa             505738.88\n",
+       "16            Parker             848518.77\n",
+       "17            Pueblo             251260.46\n",
+       "18          Thornton             567031.96"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,13 +1037,14 @@
     "#supress scientific notation by rounding\n",
     "avg_singfam_home_price_city = avg_home_price_city.round(2)\n",
     "\n",
-    "avg_singfam_home_price_city.rename(columns = {'2023-02-28':})"
+    "avg_singfam_home_price_city = avg_singfam_home_price_city.rename(columns = {'2023-02-28':'Single Fam Avg Price'})\n",
+    "avg_singfam_home_price_city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1bdb87fe",
+   "execution_count": 13,
+   "id": "ff70047e",
    "metadata": {},
    "outputs": [],
    "source": [
