changed variable and column names to fit with ZHVI

--- a/Data_Retrieval.ipynb
+++ b/Data_Retrieval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "ea279e34",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "8afc52ac",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 287 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "059c746e",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "[19 rows x 281 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "ff918cb7",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>City</th>\n",
-       "      <th>Single Fam Avg Price</th>\n",
+       "      <th>Typical Home Price (Single Family)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1011,53 +1011,53 @@
        "</div>"
       ],
       "text/plain": [
-       "                City  Single Fam Avg Price\n",
-       "0             Arvada             663225.80\n",
-       "1             Aurora             530770.16\n",
-       "2            Boulder            1418469.92\n",
-       "3       Breckenridge            1397773.68\n",
-       "4         Broomfield             774477.19\n",
-       "5        Castle Rock             670136.92\n",
-       "6   Colorado Springs             506916.92\n",
-       "7             Denver             724441.68\n",
-       "8          Englewood             534049.28\n",
-       "9       Fort Collins             619802.66\n",
-       "10            Frisco            1722745.05\n",
-       "11            Golden             694776.49\n",
-       "12          Lakewood             653374.00\n",
-       "13         Littleton             771758.24\n",
-       "14          Longmont             574385.85\n",
-       "15              Mesa             505738.88\n",
-       "16            Parker             848518.77\n",
-       "17            Pueblo             251260.46\n",
-       "18          Thornton             567031.96"
+       "                City  Typical Home Price (Single Family)\n",
+       "0             Arvada                           663225.80\n",
+       "1             Aurora                           530770.16\n",
+       "2            Boulder                          1418469.92\n",
+       "3       Breckenridge                          1397773.68\n",
+       "4         Broomfield                           774477.19\n",
+       "5        Castle Rock                           670136.92\n",
+       "6   Colorado Springs                           506916.92\n",
+       "7             Denver                           724441.68\n",
+       "8          Englewood                           534049.28\n",
+       "9       Fort Collins                           619802.66\n",
+       "10            Frisco                          1722745.05\n",
+       "11            Golden                           694776.49\n",
+       "12          Lakewood                           653374.00\n",
+       "13         Littleton                           771758.24\n",
+       "14          Longmont                           574385.85\n",
+       "15              Mesa                           505738.88\n",
+       "16            Parker                           848518.77\n",
+       "17            Pueblo                           251260.46\n",
+       "18          Thornton                           567031.96"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#reduce to only most recent data\n",
-    "avg_singfam_home_price_city = city_group_df.loc[:,['City','2023-02-28']]\n",
+    "singfam_home_price_city = city_group_df.loc[:,['City','2023-02-28']]\n",
     "\n",
     "#supress scientific notation by rounding\n",
-    "avg_singfam_home_price_city = avg_singfam_home_price_city.round(2)\n",
+    "singfam_home_price_city = singfam_home_price_city.round(2)\n",
     "\n",
-    "avg_singfam_home_price_city = avg_singfam_home_price_city.rename(columns = {'2023-02-28':'Single Fam Avg Price'})\n",
-    "avg_singfam_home_price_city"
+    "singfam_home_price_city = singfam_home_price_city.rename(columns = {'2023-02-28':'Typical Home Price (Single Family)'})\n",
+    "singfam_home_price_city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "ff70047e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export csv\n",
-    "avg_singfam_home_price_city.to_csv(\"Resources/CO_Cities_SingleFam_AvgPrice.csv\")"
+    "singfam_home_price_city.to_csv(\"Resources/CO_Cities_SingleFam_TypPrice.csv\")"
    ]
   },
   {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "f5933036",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1291,7 @@
        "[5 rows x 286 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "id": "505715b2",
    "metadata": {},
    "outputs": [],
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "1970f6ba",
    "metadata": {},
    "outputs": [
@@ -1346,8 +1346,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>City</th>\n",
-       "      <th>Single Fam Avg Price</th>\n",
-       "      <th>Average Home Price (Top Teir)</th>\n",
+       "      <th>Typical Home Price (Single Family)</th>\n",
+       "      <th>Typical Home Price (Top Teir)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1386,26 +1386,33 @@
        "</div>"
       ],
       "text/plain": [
-       "           City  Single Fam Avg Price  Average Home Price (Top Teir)\n",
-       "0        Arvada             663225.80                      794293.06\n",
-       "1        Aurora             530770.16                      620786.29\n",
-       "2       Boulder            1418469.92                     1641210.97\n",
-       "3  Breckenridge            1397773.68                     2142628.16\n",
-       "4    Broomfield             774477.19                      899867.60"
+       "           City  Typical Home Price (Single Family)  \\\n",
+       "0        Arvada                           663225.80   \n",
+       "1        Aurora                           530770.16   \n",
+       "2       Boulder                          1418469.92   \n",
+       "3  Breckenridge                          1397773.68   \n",
+       "4    Broomfield                           774477.19   \n",
+       "\n",
+       "   Typical Home Price (Top Teir)  \n",
+       "0                      794293.06  \n",
+       "1                      620786.29  \n",
+       "2                     1641210.97  \n",
+       "3                     2142628.16  \n",
+       "4                      899867.60  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#call function\n",
-    "pulldata(avg_singfam_home_price_city,co_top_tier_data,'Average Home Price (Top Teir)')\n",
+    "pulldata(singfam_home_price_city,co_top_tier_data,'Typical Home Price (Top Teir)')\n",
     "\n",
     "#supress scientific notation and create copy\n",
-    "avg_SingFam_TopTier_combined_df = avg_singfam_home_price_city.round(2).copy()\n",
-    "avg_SingFam_TopTier_combined_df.head()"
+    "SingFam_TopTier_combined_df = singfam_home_price_city.round(2).copy()\n",
+    "SingFam_TopTier_combined_df.head()"
    ]
   },
   {
@@ -1421,12 +1428,12 @@
    "id": "bc051405",
    "metadata": {},
    "source": [
-    "###"
+    "### 5th to 35th Percentile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "c02320ff",
    "metadata": {},
    "outputs": [],
@@ -1436,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "b13f8e22",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1656,7 @@
        "[5 rows x 286 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "99066fea",
    "metadata": {},
    "outputs": [
@@ -1687,9 +1694,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>City</th>\n",
-       "      <th>Single Fam Avg Price</th>\n",
-       "      <th>Average Home Price (Top Teir)</th>\n",
-       "      <th>Average Home Price (Bottom Tier)</th>\n",
+       "      <th>Typical Home Price (Single Family)</th>\n",
+       "      <th>Typical Home Price (Top Teir)</th>\n",
+       "      <th>Typical Home Price (Bottom Tier)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1733,36 +1740,36 @@
        "</div>"
       ],
       "text/plain": [
-       "           City  Single Fam Avg Price  Average Home Price (Top Teir)  \\\n",
-       "0        Arvada             663225.80                      794293.06   \n",
-       "1        Aurora             530770.16                      620786.29   \n",
-       "2       Boulder            1418469.92                     1641210.97   \n",
-       "3  Breckenridge            1397773.68                     2142628.16   \n",
-       "4    Broomfield             774477.19                      899867.60   \n",
+       "           City  Typical Home Price (Single Family)  \\\n",
+       "0        Arvada                           663225.80   \n",
+       "1        Aurora                           530770.16   \n",
+       "2       Boulder                          1418469.92   \n",
+       "3  Breckenridge                          1397773.68   \n",
+       "4    Broomfield                           774477.19   \n",
        "\n",
-       "   Average Home Price (Bottom Tier)  \n",
-       "0                         486501.75  \n",
-       "1                         360939.94  \n",
-       "2                         546725.46  \n",
-       "3                         674120.89  \n",
-       "4                         494302.13  "
+       "   Typical Home Price (Top Teir)  Typical Home Price (Bottom Tier)  \n",
+       "0                      794293.06                         486501.75  \n",
+       "1                      620786.29                         360939.94  \n",
+       "2                     1641210.97                         546725.46  \n",
+       "3                     2142628.16                         674120.89  \n",
+       "4                      899867.60                         494302.13  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pulldata(avg_SingFam_TopTier_combined_df,co_bottom_tier_data, 'Average Home Price (Bottom Tier)')\n",
+    "pulldata(SingFam_TopTier_combined_df,co_bottom_tier_data, 'Typical Home Price (Bottom Tier)')\n",
     "\n",
-    "combined_df = avg_SingFam_TopTier_combined_df.round(2).copy()\n",
+    "combined_df = SingFam_TopTier_combined_df.round(2).copy()\n",
     "combined_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "455c9a1d",
    "metadata": {},
    "outputs": [],
