--- a/Parks_Data.ipynb
+++ b/Parks_Data.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from funcs import cat_search, coord_search"
+    "from funcs import cat_search, coord_search, multi_search"
    ]
   },
   {
@@ -1656,6 +1656,430 @@
     "merged_df = pd.merge(cinema_df,co_city_data, on = \"City\", how = 'outer')\n",
     "\n",
     "merged_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681b68cd",
+   "metadata": {},
+   "source": [
+    "# Getting data for every category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "067c7647",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Key</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>accommodation</td>\n",
+       "      <td>Place to stay or live</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>accommodation.hotel</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>accommodation.hut</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>accommodation.apartment</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>accommodation.chalet</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>production.factory</td>\n",
+       "      <td>Factory or manufacturing plants</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>production.winery</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>605</th>\n",
+       "      <td>production.brewery</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>606</th>\n",
+       "      <td>production.cheese</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607</th>\n",
+       "      <td>production.pottery</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>608 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Key                      Description\n",
+       "0              accommodation            Place to stay or live\n",
+       "1        accommodation.hotel                              NaN\n",
+       "2          accommodation.hut                              NaN\n",
+       "3    accommodation.apartment                              NaN\n",
+       "4       accommodation.chalet                              NaN\n",
+       "..                       ...                              ...\n",
+       "603       production.factory  Factory or manufacturing plants\n",
+       "604        production.winery                              NaN\n",
+       "605       production.brewery                              NaN\n",
+       "606        production.cheese                              NaN\n",
+       "607       production.pottery                              NaN\n",
+       "\n",
+       "[608 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read table from html\n",
+    "url = 'https://apidocs.geoapify.com/docs/places/#about'\n",
+    "table = pd.read_html(url)\n",
+    "categories_df = table[4]\n",
+    "categories_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f2ea09c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Typical Home Price (Single Family)</th>\n",
+       "      <th>Typical Home Price (Top Teir)</th>\n",
+       "      <th>Typical Home Price (Bottom Tier)</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>accommodation</th>\n",
+       "      <th>accommodation.hotel</th>\n",
+       "      <th>accommodation.hut</th>\n",
+       "      <th>...</th>\n",
+       "      <th>catering.biergarten</th>\n",
+       "      <th>catering.taproom</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education.school</th>\n",
+       "      <th>education.driving_school</th>\n",
+       "      <th>education.music_school</th>\n",
+       "      <th>education.language_school</th>\n",
+       "      <th>education.library</th>\n",
+       "      <th>education.college</th>\n",
+       "      <th>education.university</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Arvada</td>\n",
+       "      <td>663225.80</td>\n",
+       "      <td>794293.06</td>\n",
+       "      <td>486501.75</td>\n",
+       "      <td>39.800550</td>\n",
+       "      <td>-105.081157</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Aurora</td>\n",
+       "      <td>530770.16</td>\n",
+       "      <td>620786.29</td>\n",
+       "      <td>360939.94</td>\n",
+       "      <td>39.740511</td>\n",
+       "      <td>-104.830995</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Boulder</td>\n",
+       "      <td>1418469.92</td>\n",
+       "      <td>1641210.97</td>\n",
+       "      <td>546725.46</td>\n",
+       "      <td>40.014986</td>\n",
+       "      <td>-105.270545</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Breckenridge</td>\n",
+       "      <td>1397773.68</td>\n",
+       "      <td>2142628.16</td>\n",
+       "      <td>674120.89</td>\n",
+       "      <td>39.482912</td>\n",
+       "      <td>-106.046549</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Broomfield</td>\n",
+       "      <td>774477.19</td>\n",
+       "      <td>899867.60</td>\n",
+       "      <td>494302.13</td>\n",
+       "      <td>39.940399</td>\n",
+       "      <td>-105.052080</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 257 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0          City  Typical Home Price (Single Family)  \\\n",
+       "0           0        Arvada                           663225.80   \n",
+       "1           1        Aurora                           530770.16   \n",
+       "2           2       Boulder                          1418469.92   \n",
+       "3           3  Breckenridge                          1397773.68   \n",
+       "4           4    Broomfield                           774477.19   \n",
+       "\n",
+       "   Typical Home Price (Top Teir)  Typical Home Price (Bottom Tier)   Latitude  \\\n",
+       "0                      794293.06                         486501.75  39.800550   \n",
+       "1                      620786.29                         360939.94  39.740511   \n",
+       "2                     1641210.97                         546725.46  40.014986   \n",
+       "3                     2142628.16                         674120.89  39.482912   \n",
+       "4                      899867.60                         494302.13  39.940399   \n",
+       "\n",
+       "    Longitude  accommodation  accommodation.hotel  accommodation.hut  ...  \\\n",
+       "0 -105.081157           10.0                  5.0                0.0  ...   \n",
+       "1 -104.830995           59.0                 31.0                0.0  ...   \n",
+       "2 -105.270545           81.0                 17.0                0.0  ...   \n",
+       "3 -106.046549           21.0                 19.0                0.0  ...   \n",
+       "4 -105.052080            7.0                  3.0                0.0  ...   \n",
+       "\n",
+       "   catering.biergarten  catering.taproom  education  education.school  \\\n",
+       "0                  0.0               0.0       68.0              62.0   \n",
+       "1                  0.0               0.0      103.0              77.0   \n",
+       "2                  0.0               0.0       58.0              41.0   \n",
+       "3                  0.0               0.0        2.0               2.0   \n",
+       "4                  0.0               0.0       38.0              34.0   \n",
+       "\n",
+       "   education.driving_school  education.music_school  \\\n",
+       "0                       0.0                     0.0   \n",
+       "1                       0.0                     0.0   \n",
+       "2                       1.0                     1.0   \n",
+       "3                       0.0                     0.0   \n",
+       "4                       0.0                     1.0   \n",
+       "\n",
+       "   education.language_school  education.library  education.college  \\\n",
+       "0                        0.0                4.0                1.0   \n",
+       "1                        0.0                6.0               17.0   \n",
+       "2                        0.0                6.0                1.0   \n",
+       "3                        0.0                0.0                0.0   \n",
+       "4                        0.0                2.0                1.0   \n",
+       "\n",
+       "   education.university  \n",
+       "0                   1.0  \n",
+       "1                   3.0  \n",
+       "2                   8.0  \n",
+       "3                   0.0  \n",
+       "4                   0.0  \n",
+       "\n",
+       "[5 rows x 257 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_set_PATH = 'Resources/second_set_df.csv'\n",
+    "second_set_df = pd.read_csv(second_set_PATH)\n",
+    "second_set_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e557ade8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250                        childcare\n",
+       "251           childcare.kindergarten\n",
+       "252                    entertainment\n",
+       "253            entertainment.culture\n",
+       "254    entertainment.culture.theatre\n",
+       "                   ...              \n",
+       "396                  parking.surface\n",
+       "397              parking.multistorey\n",
+       "398              parking.underground\n",
+       "399                  parking.rooftop\n",
+       "400               parking.motorcycle\n",
+       "Name: Key, Length: 151, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "third_set = categories_df.loc[250:400,'Key']\n",
+    "third_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4b41c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# third_set_df = multi_serach(second_set_df,third_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9943e40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# third_set_df.to_csv(\"Resources/third_set_df.csv\")\n",
+    "# third_set_df.head()"
    ]
   }
  ],
