updated slide deck

--- a/RealEstate_main.ipynb
+++ b/RealEstate_main.ipynb
@@ -3248,7 +3248,7 @@
    "id": "9aa1c1ec",
    "metadata": {},
    "source": [
-    "# Kelsey Section"
+    "# Coffee Shop Data"
    ]
   },
   {
@@ -3961,25 +3961,7 @@
    "id": "69eb0ab0",
    "metadata": {},
    "source": [
-    "# Jennasis Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "id": "c516f65f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #import any extra dependecies here\n",
-    "# import pandas as pd\n",
-    "# import requests\n",
-    "# import hvplot.pandas\n",
-    "# from config import geoapify_key\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from scipy.stats import linregress\n",
-    "# import warnings\n",
-    "# warnings.filterwarnings(\"ignore\")\n"
+    "# Healthcare Data"
    ]
   },
   {
@@ -4318,41 +4300,7 @@
    "id": "41736e36",
    "metadata": {},
    "source": [
-    "# Tyler Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "24436935",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dependencies and Setup\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import pandas as pd\n",
-    "# import requests\n",
-    "# import hvplot.pandas\n",
-    "# import scipy.stats as st\n",
-    "# from scipy.stats import linregress\n",
-    "# from scipy.stats import sem\n",
-    "# import numpy as np\n",
-    "\n",
-    "# Import the API key\n",
-    "# from config import geoapify_key\n",
-    "\n",
-    "# Study data files\n",
-    "# rawbottom_data_path = (r\"Resources\\RawBottomTierHomes_TimeSeries_City.csv\")\n",
-    "# rawtop_data_path = (r\"Resources\\RawTopTierHomes_TimeSeries_City.csv\")\n",
-    "# rawsingle_data_path = (r\"Resources\\RawSingleFamily_Neighborhood.csv\")\n",
-    "\n",
-    "# Read the data and the study results\n",
-    "# rawbottom_data = pd.read_csv(rawbottom_data_path)\n",
-    "# rawtop_data = pd.read_csv(rawtop_data_path)\n",
-    "# rawsingle_data = pd.read_csv(rawsingle_data_path)\n",
-    "\n",
-    "# import warnings\n",
-    "# warnings.filterwarnings(\"ignore\")"
+    "# University Data"
    ]
   },
   {
